--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,13 @@ yarn-debug.log*
 yarn-error.log*
 
 .DS_Store
+
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Vercel
+.vercel
