--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node mock-server.js",
     "mock": "node mock-server.js",
     "dev": "node mock-server.js",
     "vercel-build": "echo 'No build step required'"
