Updated package.json with starting index file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yippee-database-testing",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "mock-server.js",
   "engines": {
     "node": ">=18.x"
   },
