--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,13 @@
 node_modules
-.env
-.env.local
+.git
 .DS_Store
 *.log
-.git
-.gitignore
+.env
+.env.local
+server.js
+new_server.js
+old_server.js
+routes/
+server/
+*.md
 
