--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "yippee-database-testing",
+  "name": "database_testing",
   "version": "1.0.0",
   "main": "mock-server.js",
-  "engines": {
-    "node": ">=18.x"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node mock-server.js",
     "mock": "node mock-server.js",
     "dev": "node mock-server.js",
-    "vercel-build": "echo 'No build step required'"
+    "vercel-build": "echo 'Building for Vercel...'"
   },
-  "keywords": ["yippee", "restaurant", "food", "api"],
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "Yippee food discovery app backend API",
+  "description": "Yippee Mock Backend Server - Restaurant API with mock data",
+  "engines": {
+    "node": ">=18.x"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
-    "axios": "^1.6.2",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "path": "^0.12.7"
   }
 }
